--- a/EncryptionDemo/EncryptionDemo.csproj
+++ b/EncryptionDemo/EncryptionDemo.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.1.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.Crypto.dll.1.8.1\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,14 +48,20 @@
   <ItemGroup>
     <Compile Include="Base64Helper.cs" />
     <Compile Include="DESHelper.cs" />
+    <Compile Include="HexHelper.cs" />
+    <Compile Include="SM2\Cipher.cs" />
+    <Compile Include="SM2\SM2Utils.cs" />
+    <Compile Include="SM2\SM2.cs" />
     <Compile Include="SHA1Helper.cs" />
     <Compile Include="RSAHelper.cs" />
     <Compile Include="MD5Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SM3\SM3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
